kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odprti-racuni-obcine-deployment
  labels:
    app: odprti-racuni-obcine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odprti-racuni-obcine
  template:
    metadata:
      labels:
        app: odprti-racuni-obcine
    spec:
      volumes:
        - name: odprti-racuni-obcine-shared-storage
          emptyDir: {}
      containers:
        - name: odprti-racuni-obcine
          image: odprti-racuni-obcine
          volumeMounts:
            - name: odprti-racuni-obcine-shared-storage
              mountPath: /pvc
          command:
            - gunicorn
            - odprti_racuni_obcine.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 100m
            limits:
              memory: 400Mi
              cpu: 200m
        - name: odprti-racuni-obcine-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: odprti-racuni-obcine-shared-storage
              mountPath: /usr/share/nginx/html
