kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://odprtiracuni-obcine.djnd.si"
      - "https://odprtiracuni-obcine.danesjenovdan.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odprti-racuni-obcine
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - odprtiracuni-obcine.djnd.si
        - odprtiracuni-obcine.danesjenovdan.si
      secretName: odprti-racuni-obcine-tls
  rules:
    - host: odprtiracuni-obcine.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odprti-racuni-obcine
                port:
                  number: 8000
    - host: odprtiracuni-obcine.danesjenovdan.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odprti-racuni-obcine-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      odprti-racuni-obcine-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.odprtiracuni-obcine.djnd.si
      secretName: odprti-racuni-obcine-nginx-tls
  rules:
    - host: files.odprtiracuni-obcine.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odprti-racuni-obcine-nginx
                port:
                  number: 80
